Issue 3718 - changes to support registering classes output … (#359)
* Issue 3718 - changes to support registering generated classes output generated resources so that interested downstream TypeElement visitors (like for graal) can post process them.

Fixing a bug where the JavaClassElementExt constructor didn't take into account the arrayDimensions property of the JavaClassElement argument

Update gradle wrapper to 6.7-rc-3

Update to Micronaut 2.1.0

* Adding jvmArgs "--enable-preview" for jdk15 builds, to match Micronaut 2.1.0 JavaParser and prevent class version error test failures on here file processing in Spock tests

* Restoring to previous version. Updated version is handled by a separate commit/PR.

* Bump Micronaut and MicronautTest dependencies to latest.